--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -89,7 +89,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link {% if request.resolver_match.url_name == 'product-list' %}active{% endif %}" 
                                        href="{% url 'product-list' %}">
-                                        <i class="fas fa-boxes"></i> محصولات
+                                        <i class="fas fa-boxes"></i> کالاها
                                     </a>
                                 </li>
                                 <li class="nav-item">
