--- a/templates/workflow/dashboard.html
+++ b/templates/workflow/dashboard.html
@@ -63,9 +63,9 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div class="card-body text-center">
-                        <h5 class="card-title">مدیریت محصولات</h5>
+                        <h5 class="card-title">مدیریت کالاها</h5>
                         <p><i class="fas fa-boxes fa-3x"></i></p>
-                        <a href="{% url 'product-list' %}" class="btn btn-primary">مشاهده محصولات</a>
+                        <a href="{% url 'product-list' %}" class="btn btn-primary">مشاهده کالاها</a>
                     </div>
                 </div>
             </div>
