--- a/templates/workflow/inventory_report.html
+++ b/templates/workflow/inventory_report.html
@@ -19,8 +19,8 @@
                     <thead class="thead-light">
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">کد محصول</th>
-                            <th scope="col">نام محصول</th>
+                            <th scope="col">کد کالا</th>
+                            <th scope="col">نام کالا</th>
                             <th scope="col">واحد</th>
                             <th scope="col">موجودی</th>
                             <th scope="col">قیمت واحد</th>
@@ -50,7 +50,7 @@
                         </tr>
                         {% empty %}
                         <tr>
-                            <td colspan="8" class="text-center">محصولی یافت نشد.</td>
+                            <td colspan="8" class="text-center">کالایی یافت نشد.</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -70,13 +70,13 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header bg-info text-white">
-                            <h5 class="mb-0">محصولات با کمترین موجودی</h5>
+                            <h5 class="mb-0">کالاها با کمترین موجودی</h5>
                         </div>
                         <div class="card-body">
                             <table class="table table-sm">
                                 <thead>
                                     <tr>
-                                        <th>محصول</th>
+                                        <th>کالا</th>
                                         <th>موجودی</th>
                                         <th>حداقل موجودی</th>
                                     </tr>
@@ -102,13 +102,13 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header bg-success text-white">
-                            <h5 class="mb-0">محصولات با بیشترین ارزش</h5>
+                            <h5 class="mb-0">کالاها با بیشترین ارزش</h5>
                         </div>
                         <div class="card-body">
                             <table class="table table-sm">
                                 <thead>
                                     <tr>
-                                        <th>محصول</th>
+                                        <th>کالا</th>
                                         <th>موجودی</th>
                                         <th>ارزش کل</th>
                                     </tr>
