--- a/templates/workflow/product_create.html
+++ b/templates/workflow/product_create.html
@@ -1,6 +1,6 @@
 {% extends 'workflow/base.html' %}
 
-{% block title %}افزودن محصول جدید - سیستم مدیریت انبار{% endblock %}
+{% block title %}افزودن کالای جدید - سیستم مدیریت انبار{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -8,7 +8,7 @@
         <div class="col-lg-8">
             <div class="card shadow">
                 <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0">افزودن محصول جدید</h4>
+                    <h4 class="mb-0">افزودن کالای جدید</h4>
                 </div>
                 <div class="card-body">
                     <form method="post" novalidate>
