--- a/templates/workflow/product_list.html
+++ b/templates/workflow/product_list.html
@@ -1,16 +1,16 @@
 {% extends 'workflow/base.html' %}
 {% load workflow_filters %}
 
-{% block title %}لیست محصولات - سیستم مدیریت انبار{% endblock %}
+{% block title %}لیست کالاها - سیستم مدیریت انبار{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="card shadow">
         <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-            <h4 class="mb-0">لیست محصولات</h4>
+            <h4 class="mb-0">لیست کالاها</h4>
             {% if perms.workflow.add_product %}
             <a href="{% url 'product-create' %}" class="btn btn-light">
-                <i class="fas fa-plus-circle"></i> محصول جدید
+                <i class="fas fa-plus-circle"></i> کالای جدید
             </a>
             {% endif %}
         </div>
@@ -36,7 +36,7 @@
                     <thead class="thead-dark">
                         <tr>
                             <th>شناسه</th>
-                            <th>عنوان محصول</th>
+                            <th>عنوان کالا</th>
                             <th>کد</th>
                             <th>واحد</th>
                             <th>قیمت واحد</th>
@@ -71,7 +71,7 @@
                         </tr>
                         {% empty %}
                         <tr>
-                            <td colspan="6" class="text-center">محصولی یافت نشد.</td>
+                            <td colspan="6" class="text-center">کالایی یافت نشد.</td>
                         </tr>
                         {% endfor %}
                     </tbody>
