--- a/templates/workflow/reports_dashboard.html
+++ b/templates/workflow/reports_dashboard.html
@@ -51,13 +51,13 @@
                         <div class="col-md-6 mb-4">
                             <div class="card h-100">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">آمار محصولات و کاربران</h5>
+                                    <h5 class="mb-0">آمار کالاها و کاربران</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
                                             <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
-                                                <span><i class="fas fa-box mr-2"></i> تعداد محصولات:</span>
+                                                <span><i class="fas fa-box mr-2"></i> تعداد کالاها:</span>
                                                 <span class="badge badge-primary">{{ total_products }}</span>
                                             </div>
                                         </div>
